--- a/db_seed_data/README
+++ b/db_seed_data/README
@@ -14,9 +14,15 @@ username|firstname|lastname|home region
 user|nickname|category|length_ft|length_in|shaper|shape(model)|fins
 
 -->entry_data: 
-(using msw api data collected for past dates, only rounded degress available)
 a pipe-separated file of example journal entry information, to get things rolling:
-user_id|datetime start|loc_id|spot_name|swell1_ht|swell1_per|swell1_arrow_deg|swell1_dir_comp|wind_speed|wind_gusts|wind_arrow_deg|board_id|board_pref|board_notes
+(using msw api data collected for past dates, only rounded degress available)
+
+user_id|datetime start|loc_id|spot_name|go_out|
+swell1_ht|swell1_per|swell1_dir_deg|swell1_arrow_deg|swell1_dir_comp|
+wind_speed|wind_gusts|wind_arrow_deg|
+board_id|board_pref|board_notes|buddy|gen_notes
+rate_wave_challenge|rate_wave_fun|rate_crowd_den|rate_crowd_vibe|rate_overall_fun
+
 
 
 STRETCH GOALS:
