added lots of fields to entries table, added entries seed. entry details page working. msw arrows working.

--- a/db_seed_data/README
+++ b/db_seed_data/README
@@ -8,7 +8,7 @@ loc_id|Region|Country|State or Province|County|Beach Name|MSW_ID used|msw id exi
 -->user_data: 
 a pipe-separated file of user information:
 
-username|firstname|lastname|home region
+id|username|email|password|firstname|lastname|home region
 
 -->board (quiver) data:
 user|nickname|category|length_ft|length_in|shaper|shape(model)|fins
