--- a/db_seed_data/README
+++ b/db_seed_data/README
@@ -18,7 +18,7 @@ a pipe-separated file of example journal entry information, to get things rollin
 (using msw api data collected for past dates, only rounded degress available)
 
 user_id|datetime start|loc_id|spot_name|go_out|
-swell1_ht|swell1_per|swell1_dir_deg|swell1_arrow_deg|swell1_dir_comp|
+swell1_ht|swell1_per|swell1_dir_deg_global|swell1_arrow_deg|swell1_dir_comp|
 wind_speed|wind_gusts|wind_arrow_deg|
 board_id|board_pref|board_notes|buddy|gen_notes
 rate_wave_challenge|rate_wave_fun|rate_crowd_den|rate_crowd_vibe|rate_overall_fun
